--- a/tti2sdk/src/main/res/layout/activity_progress.xml
+++ b/tti2sdk/src/main/res/layout/activity_progress.xml
@@ -98,20 +98,35 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/containerDailyCheckupTop">
 
-        <ImageView
+        <com.airbnb.lottie.LottieAnimationView
             android:id="@+id/imgMainDailyCheckup"
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:scaleType="centerCrop"
+            android:layout_marginBottom="-10dp"
             app:layout_constraintBottom_toTopOf="@id/containerAction"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:text="TEste teste teste"/>
+            app:flow_wrapMode="aligned"
+            app:lottie_autoPlay="true"
+            app:lottie_loop="true" />
+        
+        <View
+            android:layout_width="140dp"
+            android:layout_height="72dp"
+            android:id="@+id/btnConfirmAction"
+            android:clickable="true"
+            android:focusable="true"
+            android:background="@null"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/containerAction"/>
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/containerAction"
             android:layout_width="match_parent"
-            android:layout_height="220dp"
+            android:layout_height="240dp"
             android:background="@drawable/background_card_destination"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
