--- a/tti2sdk/src/main/res/layout/item_around_here.xml
+++ b/tti2sdk/src/main/res/layout/item_around_here.xml
@@ -72,12 +72,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:id="@+id/imgTypeIcon"
-                android:padding="2dp"
+                android:padding="3dp"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:scaleType="centerCrop"/>
+                android:scaleType="fitCenter"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -86,6 +86,8 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="10dp"
             android:ellipsize="end"
             android:fontFamily="@font/poppins_regular"
             android:maxLines="1"
@@ -93,8 +95,9 @@
             android:textColor="@color/gray_text_list"
             android:textSize="12sp"
             app:layout_constraintBottom_toTopOf="@id/guideCenterHor"
-            app:layout_constraintEnd_toStartOf="@+id/guideActionIcon"
+            app:layout_constraintEnd_toStartOf="@+id/imgGo"
             app:layout_constraintStart_toEndOf="@+id/imgAroundHere"
+            app:layout_constraintTop_toTopOf="parent"
             tools:text="Food" />
 
         <TextView
@@ -102,14 +105,16 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginStart="20dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="4dp"
             android:ellipsize="end"
             android:fontFamily="@font/telkomsel_batik_sans_regular"
             android:maxLines="2"
-            android:textStyle="bold"
             android:textColor="@color/black"
             android:textSize="16sp"
+            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="@id/guideActionIcon"
+            app:layout_constraintEnd_toStartOf="@+id/imgGo"
             app:layout_constraintStart_toEndOf="@id/imgAroundHere"
             app:layout_constraintTop_toBottomOf="@id/txtType"
             tools:text="Valid until 30 Dec 2023" />
