--- a/tti2sdk/src/main/res/layout/activity_educational.xml
+++ b/tti2sdk/src/main/res/layout/activity_educational.xml
@@ -137,4 +137,13 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+    <include
+        layout="@layout/dialog_educational_completed"
+        android:id="@+id/dialogEducCompleted"
+        android:visibility="gone"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/containerScratch"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
