--- a/tti2sdk/src/main/res/layout/item_daily.xml
+++ b/tti2sdk/src/main/res/layout/item_daily.xml
@@ -121,17 +121,19 @@
     <TextView
         android:id="@+id/txtItemDailyTitle"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:layout_marginTop="2dp"
         android:layout_marginStart="36dp"
         android:ellipsize="end"
         android:fontFamily="@font/poppins_bold"
-        android:maxLines="1"
+        android:maxLines="2"
         android:textAlignment="viewStart"
         android:textColor="@color/gray_text"
-        android:textSize="@dimen/thirteen_sp"
+        android:textSize="12sp"
         app:layout_constraintBottom_toTopOf="@id/guideCenterHor"
         app:layout_constraintEnd_toStartOf="@id/guideEndVer"
         app:layout_constraintStart_toEndOf="@+id/guideStartVer"
+        app:layout_constraintTop_toBottomOf="@+id/txtFlag1"
         tools:text="12 Days of Christmas" />
 
     <TextView
