fix scratch mission

--- a/tti2sdk/src/main/res/layout/activity_educational.xml
+++ b/tti2sdk/src/main/res/layout/activity_educational.xml
@@ -112,10 +112,12 @@
         android:id="@+id/containerAction"
         android:layout_width="match_parent"
         android:layout_height="100dp"
+        android:visibility="gone"
         android:background="@drawable/background_card_destination"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        tools:visibility="visible">
 
         <TextView
             android:layout_width="match_parent"
