--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -117,6 +117,28 @@
         app:layout_constraintTop_toBottomOf="@id/labelTypePlan"/>
 
     <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/labelLocation"
+        android:text="Location:"
+        android:textColor="#B5B5B5"
+        android:textSize="20sp"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginTop="10dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/planSpinner"/>
+
+    <EditText
+        android:id="@+id/locationEditText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="20dp"
+        android:text="initial city"
+        android:textColor="@color/black"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/labelLocation"/>
+
+    <TextView
         android:id="@+id/labelDebug"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -126,7 +148,7 @@
         android:textColor="#B5B5B5"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/planSpinner"/>
+        app:layout_constraintTop_toBottomOf="@id/locationEditText"/>
 
     <CheckBox
         android:id="@+id/debug_checkbox"
