--- a/tti2sdk/src/main/res/layout/activity_scratch.xml
+++ b/tti2sdk/src/main/res/layout/activity_scratch.xml
@@ -90,104 +90,129 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/containerDailyCheckup"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:background="@color/gray_text_disable"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_height="400dp"
+        android:orientation="vertical"
+        android:gravity="center"
+        android:focusableInTouchMode ="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/containerScratch">
 
-        <!--  REPLACE THIS BY THE ANIMATION TYPE       -->
-        <View
-            android:id="@+id/imgMainDailyCheckup"
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/mainImg"
+            android:adjustViewBounds="true"
+            android:scaleType="fitXY"
+            android:visibility="invisible"
+            android:layout_alignParentBottom="true"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:visibility="visible"/>
+
+        <com.timwe.tti2sdk.ui.customViews.ScratchCard
+            android:id="@+id/scratchCard"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            app:layout_constraintBottom_toTopOf="@id/containerAction"
+            android:visibility="gone"
+            android:layout_gravity="center"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/containerAction"
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/containerAction"
+        android:layout_width="match_parent"
+        android:layout_height="240dp"
+        android:background="@drawable/background_card_destination"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <TextView
+            android:id="@+id/txtTitleDailyCheckup"
             android:layout_width="match_parent"
-            android:layout_height="220dp"
-            android:background="@drawable/background_card_destination"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="18dp"
+            android:gravity="center"
+            android:fontFamily="@font/telkomsel_batik_sans_regular"
+            android:textColor="@color/black"
+            android:textSize="24sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="Clean the front lamp"/>
+
+        <TextView
+            android:id="@+id/txtDescriptionDailyCheckup"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="18dp"
+            android:layout_marginTop="14dp"
+            android:layout_marginEnd="18dp"
+            android:fontFamily="@font/poppins_regular"
+            android:gravity="center"
+            android:textSize="16sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/txtTitleDailyCheckup"
+            tools:text=" You cannot see anything with a wet and foggy mirror! \n Clean it properly with your finger to avoid accidents. "/>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/btnDoItLater"
+            android:layout_width="180dp"
+            android:layout_height="38dp"
+            android:background="@drawable/background_arrounded_line_red"
+            android:clickable="true"
+            android:focusable="true"
+            android:foreground="?android:attr/selectableItemBackground"
+            android:orientation="horizontal"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent">
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/txtDescriptionDailyCheckup"
+            tools:visibility="visible">
+
+            <ImageView
+                android:id="@+id/iconRefresh"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:contentDescription="@string/img_content_description"
+                android:src="@drawable/ico_reload_red"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/txtTitleDailyCheckup"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="18dp"
-                android:gravity="center"
-                android:fontFamily="@font/telkomsel_batik_sans_regular"
-                android:textColor="@color/black"
-                android:textSize="24sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:text="Clean the front lamp"/>
-
-            <TextView
-                android:id="@+id/txtDescriptionDailyCheckup"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="18dp"
-                android:layout_marginTop="14dp"
-                android:layout_marginEnd="18dp"
-                android:fontFamily="@font/poppins_regular"
-                android:gravity="center"
-                android:textSize="16sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/txtTitleDailyCheckup"
-                tools:text=" You cannot see anything with a wet and foggy mirror! \n Clean it properly with your finger to avoid accidents. "/>
-
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/btnDoItLater"
-                android:layout_width="180dp"
-                android:layout_height="38dp"
-                android:background="@drawable/background_arrounded_line_red"
-                android:clickable="true"
-                android:focusable="true"
-                android:foreground="?android:attr/selectableItemBackground"
-                android:orientation="horizontal"
+                android:fontFamily="@font/poppins_bold"
+                android:text="@string/btn_doItLater"
+                android:textColor="@color/red_default"
+                android:textSize="14sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/txtDescriptionDailyCheckup"
-                tools:visibility="visible">
-
-                <ImageView
-                    android:id="@+id/iconRefresh"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="20dp"
-                    android:contentDescription="@string/img_content_description"
-                    android:src="@drawable/ico_reload_red"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/poppins_bold"
-                    android:text="@string/btn_doItLater"
-                    android:textColor="@color/red_default"
-                    android:textSize="14sp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toEndOf="@id/iconRefresh"
-                    app:layout_constraintTop_toTopOf="parent"
-                    tools:text="Do it later" />
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
+                app:layout_constraintStart_toEndOf="@id/iconRefresh"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="Do it later" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <include
+        layout="@layout/dialog_scratch_completed"
+        android:id="@+id/dialogScratchCompleted"
+        android:visibility="gone"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/containerScratch"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
