--- a/tti2sdk/src/main/res/values/color.xml
+++ b/tti2sdk/src/main/res/values/color.xml
@@ -16,6 +16,7 @@
     <color name="background_destination_gray">#E9E4E4</color>
     <color name="line_gray_prizes">#EBEEEF</color>
     <color name="blue_dark">#001A41</color>
+    <color name="blue_dark_line">#304565</color>
     <color name="blue_progress">#0050AE</color>
     <color name="stroke_blue">#0075FF</color>
     <color name="blue_card">#92C6ED</color>
